# OllamaPy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  IMPROVEMENTS.md  LICENSE  PROJECT_INSIGHTS.md  README.md  TODO.md  example_vibe_test_report.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_middleware.py  test_silent_middleware.py  todo.md
.continue/assistants/: new-assistant.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  deploy-docs.yml  docker.yml  local-test.yml  release.yml  runner-health.yml  test.yml
config/: ai_settings.json  vibe_test_models.json
docs/: calculate.html  customPythonShell.html  directoryReader.html  fear.html  fileReader.html  getTime.html  getWeather.html  getting-started.md  index.html  index.md  installation.md  quick-start.md  skills.html  skills.md  square_root.html  vibe_test_results.html  vibe_test_results.json  vibe_tests.html
docs/api/: index.md
docs/development/: contributing.md  releases.md  testing.md
docs/features/: chat.md  skills.md  vibe-tests.md
docs/skill-editor/: api.md  creating-skills.md  getting-started.md  index.md
docs/skills/: built-in.md  index.md
scripts/: generate_skills_showcase.py  generate_vibe_test_showcase.py  test.sh
src/: ai_helpers.py
src/ollamapy/: __init__.py  actions.py  ai_query.py  analysis_engine.py  chat_session.py  docs_generator.py  main.py  model_manager.py  multi_model_vibe_tests.py  ollama_client.py  ollama_middleware.py  parameter_utils.py  skill_generator.py  skill_schema.json  skillgen_report.py  skills.py  terminal_chat.py  terminal_interface.py  vibe_report.py  vibe_test_runner.py  vibe_tests.py
src/ollamapy/skill_editor/: __init__.py  api.py  validator.py
src/ollamapy/skills_data/: calculate.json  customPythonShell.json  directoryReader.json  fear.json  fileReader.json  getTime.json  getWeather.json  square_root.json
temp-coverage/: coverage.xml  pytest-results.xml
tests/: README.md  __init__.py  conftest.py  test_ai_query.py  test_integration_comprehensive.py  test_main.py  test_main_comprehensive.py  test_ollama_client.py  test_ollama_client.py.skip  test_package_validation.py  test_performance.py
tests/integration/: test_skill_lifecycle.py
tests/unit/: test_skill_editor.py  test_skills.py
